--- a/MyStock/Pages/Products/ProductPage.xaml
+++ b/MyStock/Pages/Products/ProductPage.xaml
@@ -1,6 +1,7 @@
 ﻿<pages:EntityPage x:Class="MyStock.Pages.Products.ProductPage"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                  xmlns:common="clr-namespace:MyStock.Common"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                   xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
@@ -86,14 +87,14 @@
                                  VerticalAlignment="Bottom"
                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                 Text="{Binding Cost, StringFormat=C2}" />
+                                 Text="{Binding Cost, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
 
                         <TextBox Grid.Row="6"
                                  Margin="0,10"
                                  VerticalAlignment="Bottom"
                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Price}"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                 Text="{Binding Price, StringFormat=C2}" />
+                                 Text="{Binding Price, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
                         <CheckBox Grid.Row="7"
                                   Content="{x:Static langAsset:Translations.Active}"
                                   IsChecked="{Binding IsActive}" />
