--- a/MyStock/Pages/Sale/SalesPage.xaml
+++ b/MyStock/Pages/Sale/SalesPage.xaml
@@ -2,7 +2,6 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:common="clr-namespace:MyStock.Common"
-                  xmlns:controls="clr-namespace:MyStock.Controls"
                   xmlns:convertors="clr-namespace:MyStock.Converters"
                   xmlns:customerControls="clr-namespace:MyStock.Pages.Customers"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -50,7 +49,7 @@
                         <TextBlock x:Name="DateTextBlock"
                                    VerticalAlignment="Center"
                                    FontSize="24"
-                                   Text="{Binding Date, StringFormat=D}" />
+                                   Text="{Binding Date, StringFormat=D, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
 
                         <ToggleButton x:Name="CalendarPopupToggle"
                                       Margin="10,0,0,0"
@@ -114,7 +113,7 @@
                                      materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Quantity}"
                                      IsEnabled="{Binding ElementName=thisPagee, Path=DataContext.IsOpen}"
                                      Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                                     Text="{Binding Quantity, UpdateSourceTrigger=LostFocus, StringFormat=N2}" />
+                                     Text="{Binding Quantity, UpdateSourceTrigger=LostFocus, StringFormat=N2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
                         </StackPanel>
                         <Button Command="{Binding AddDetail}"
                                 Content="{x:Static langAsset:Translations.Add}"
@@ -149,7 +148,7 @@
                                                      Margin="5,0"
                                                      VerticalAlignment="Center"
                                                      IsEnabled="{Binding ElementName=thisPagee, Path=DataContext.IsOpen}"
-                                                     Text="{Binding Quantity, UpdateSourceTrigger=LostFocus, StringFormat=N2}"
+                                                     Text="{Binding Quantity, UpdateSourceTrigger=LostFocus, StringFormat=N2, ConverterCulture={x:Static common:AppManager.CultureInfo}}"
                                                      TextAlignment="Center" />
 
                                             <Button Width="30"
@@ -187,7 +186,7 @@
                                                      Margin="5,0"
                                                      VerticalAlignment="Center"
                                                      IsEnabled="{Binding ElementName=thisPagee, Path=DataContext.IsOpen}"
-                                                     Text="{Binding UnitPrice, UpdateSourceTrigger=LostFocus, StringFormat=C2}"
+                                                     Text="{Binding UnitPrice, UpdateSourceTrigger=LostFocus, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}"
                                                      TextAlignment="Center" />
                                         </StackPanel>
                                     </DataTemplate>
@@ -197,7 +196,7 @@
                             <DataGridTemplateColumn Header="{x:Static langAsset:Translations.Sum}">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <TextBlock VerticalAlignment="Center" Text="{Binding TotalPrice, StringFormat=C2}" />
+                                        <TextBlock VerticalAlignment="Center" Text="{Binding TotalPrice, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
@@ -270,7 +269,7 @@
                                 <TextBlock Grid.Column="1"
                                            HorizontalAlignment="Right"
                                            VerticalAlignment="Center"
-                                           Text="{Binding Subtotal, StringFormat=C2}" />
+                                           Text="{Binding Subtotal, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
 
                                 <!--  Discount  -->
                                 <Border Grid.Row="1"
@@ -289,7 +288,7 @@
                                          HorizontalAlignment="Right"
                                          VerticalAlignment="Center"
                                          IsEnabled="{Binding IsOpen}"
-                                         Text="{Binding Discount, UpdateSourceTrigger=LostFocus, StringFormat=C2}"
+                                         Text="{Binding Discount, UpdateSourceTrigger=LostFocus, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}"
                                          TextAlignment="Right" />
 
                                 <!--  Total  -->
@@ -307,7 +306,7 @@
                                            Grid.Column="1"
                                            HorizontalAlignment="Right"
                                            VerticalAlignment="Center"
-                                           Text="{Binding Total, StringFormat=C2}" />
+                                           Text="{Binding Total, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
 
                                 <!--  PaidAmount  -->
                                 <Border Grid.Row="3"
@@ -326,7 +325,7 @@
                                          HorizontalAlignment="Right"
                                          VerticalAlignment="Center"
                                          IsEnabled="{Binding IsOpen}"
-                                         Text="{Binding PaidAmount, UpdateSourceTrigger=LostFocus, StringFormat=C2}"
+                                         Text="{Binding PaidAmount, UpdateSourceTrigger=LostFocus, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}"
                                          TextAlignment="Right" />
 
                                 <!--  Balance  -->
@@ -348,7 +347,7 @@
                                            VerticalAlignment="Center"
                                            FontSize="{x:Static common:AppConfig.Header1FontSize}"
                                            FontWeight="Medium"
-                                           Text="{Binding Balance, UpdateSourceTrigger=LostFocus, StringFormat=C2}" />
+                                           Text="{Binding Balance, UpdateSourceTrigger=LostFocus, StringFormat=C2, ConverterCulture={x:Static common:AppManager.CultureInfo}}" />
                             </Grid>
                         </StackPanel>
 
