--- a/MyStock/Windows/LoginWindow.xaml
+++ b/MyStock/Windows/LoginWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="MyStock.Windows.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:common="clr-namespace:MyStock.Common"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
-        xmlns:local="clr-namespace:MyStock.Windows"
         xmlns:localControls="clr-namespace:MyStock.Controls"
         xmlns:localConvertors="clr-namespace:MyStock.Converters"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -60,8 +60,13 @@
                             VerticalAlignment="Center">
 
                     <StackPanel>
-                        <localControls:Logo Width="150" Height="150" />
-                        <localControls:CompanyName FontSize="50" />
+                        <localControls:Logo Width="150"
+                                            Height="150"
+                                            Thickness="3" />
+                        <TextBlock HorizontalAlignment="Center"
+                                   FontSize="45"
+                                   Text="{Binding Source={x:Static common:AppManager.Settings}, Path=CompanyName}" />
+
                     </StackPanel>
 
                     <TextBlock Margin="10,15,10,5"
